modify some pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./src//assets//images//icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Professional Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
   </head>
   <body>
     <div id="root"></div>
